# exa-amd

./: .gitattributes  CITATION.cff  README.md  amd_env.yml  exa_amd.py  pyproject.toml
.github/workflows/: sphinx.yml  unit_tests.yml
JOSS_paper/: exa_amd_joss.bib  paper.md
configs/: perlmutter.json  perlmutter_cpu.json  perlmutter_quaternary.json
docs/source/: conf.py  index.rst  mlip_workflow.rst  parsl_config.rst  team.rst  tutorial.rst  workflow.rst
docs/source/reference_guide/: parsl_tasks.rst  workflows.rst
ml_models/cgcnn/: data.py  predict.py
ml_models/mlip/: mlip_relax.py  uma-s-1p1.pt
parsl_configs/: parsl_config_registry.py  parsl_executors_labels.py  perlmutter.py  perlmutter_cpu.py  perlmutter_mlip.py
parsl_tasks/: cgcnn.py  compile_hull.py  convex_hull.py  dft_optimization.py  ehull.py  ehull_utils.py  gen_structures.py  hull.py  ml_ehull.py  mlip_relaxation.py  select_structures.py
tests/: test_post_processing.py
tools/: config_labels.py  config_manager.py  plot_pymatgen_phase_diagram.py  plot_ternary_ehull_map.py  plot_ternary_hull_style.py  post_processing.py  pymatgen_ehull.py
workflows/: __init__.py  core.py  mlip_workflow.py  registry.py  steps.py  vasp_based.py  vasp_workflow.py
workflows/vasp_assets/: INCAR.en  INCAR.rx  INCAR_mag.en
